compiler/tests/pass/multifile/main.afns
package demo;

fn main() -> i32 {
    return helper();
}
