compiler/tests/fail/return_wrong_type/main.afns
package wrongret;

fn get_count() -> i32 {
    return true;
}

fn main() -> i32 {
    return get_count();
}
